# agent-fleet

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/: README.md  architecture.md  fleet-capabilities.md  fleet-integration.md  getting-started.md  init.md  milestones.md  product-direction.md  release.md  requirements.md  validation.md
fleet_backend/: bootstrap.sh  devices.example.json  fleet.py  pyproject.toml
scripts/: generate-demo-gif.sh  install.ps1  install.sh
skills/agentfleet/: SKILL.md
skills/fleet-pty-router/: SKILL.md
src/: cli.rs  config.rs  fleet.rs  fleet_native.rs  lib.rs  lock.rs  main.rs  paths.rs  protocol.rs  router.rs  state.rs
