[package]
name = "agent-fleet"
version = "0.1.0"
edition = "2021"
description = "One agent login that works across every device in your fleet"
license = "MIT"
default-run = "rpty"

[lib]
name = "pty_router"
path = "src/lib.rs"

[[bin]]
name = "rpty"
path = "src/main.rs"

[dependencies]
md5 = "0.7"
serde_json = { version = "1", features = ["preserve_order"] }

[target.'cfg(not(windows))'.dependencies]
ssh2 = "0.9"

[target.'cfg(windows)'.dependencies]
base64 = "0.22"
russh = { version = "0.62.1", default-features = false, features = ["flate2", "ring", "rsa"] }
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "time"] }
